# pawndropper

./: .gitignore  Cargo.toml  README.md
src/: board.rs  cli.rs  eval.rs  game.rs  magic.rs  main.rs  move.rs  move_bitboards.rs  search.rs  zobrist.rs
